--- a/index.html
+++ b/index.html
@@ -1,196 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>For You ❤️</title>
-  <style>
-    * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-    }
-
-    body {
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background: linear-gradient(135deg, #ff9a9e, #fecfef);
-      padding: 20px;
-      text-align: center;
-      overflow: hidden;
-    }
-
-    .card {
-      width: 100%;
-      max-width: 420px;
-      background: white;
-      border-radius: 28px;
-      padding: 30px 22px 34px;
-      box-shadow: 0 25px 50px rgba(0,0,0,0.15);
-      position: relative;
-      z-index: 2;
-    }
-
-    h1 {
-      font-size: 1.7rem;
-      margin-bottom: 10px;
-    }
-
-    p {
-      font-size: 1rem;
-      color: #666;
-      margin-bottom: 28px;
-    }
-
-    .buttons {
-      display: flex;
-      gap: 14px;
-      justify-content: center;
-      align-items: center;
-      flex-wrap: wrap;
-    }
-
-    button {
-      border: none;
-      border-radius: 999px;
-      padding: 14px 26px;
-      font-size: 1rem;
-      font-weight: 600;
-      cursor: pointer;
-      transition: transform 0.25s ease, box-shadow 0.25s ease;
-    }
-
-    button:active {
-      transform: scale(0.95);
-    }
-
-    .yes {
-      background: linear-gradient(135deg, #ff4d6d, #ff758f);
-      color: white;
-      box-shadow: 0 10px 22px rgba(255,77,109,0.35);
-      transform-origin: center;
-    }
-
-    .no {
-      background: #f1f1f1;
-      color: #444;
-    }
-
-    .success {
-      font-size: 1.5rem;
-      font-weight: 700;
-      color: #ff4d6d;
-      margin-top: 14px;
-      animation: popIn 0.6s ease;
-    }
-
-    @keyframes popIn {
-      from {
-        transform: scale(0.7);
-        opacity: 0;
-      }
-      to {
-        transform: scale(1);
-        opacity: 1;
-      }
-    }
-
-    .heart {
-      position: absolute;
-      font-size: 18px;
-      animation: floatUp 5s linear infinite;
-      opacity: 0.7;
-    }
-
-    @keyframes floatUp {
-      from {
-        transform: translateY(0);
-        opacity: 0.8;
-      }
-      to {
-        transform: translateY(-110vh);
-        opacity: 0;
-      }
-    }
-
-    @media (max-width: 400px) {
-      h1 { font-size: 1.5rem; }
-      button { padding: 13px 22px; }
-    }
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>For You ❤️</title>
+<style>
+  * { box-sizing: border-box; margin: 0; padding: 0; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif; }
+  body { height: 100vh; display: flex; align-items: center; justify-content: center; background: linear-gradient(135deg, #ff9a9e, #fecfef); padding: 20px; text-align: center; overflow: hidden; }
+  .card { width: 100%; max-width: 420px; background: white; border-radius: 28px; padding: 30px 22px 34px; box-shadow: 0 25px 50px rgba(0,0,0,0.15); position: relative; z-index: 2; }
+  h1 { font-size: 1.7rem; margin-bottom: 10px; }
+  p { font-size: 1rem; color: #666; margin-bottom: 28px; transition: all 0.3s ease; }
+  .buttons { display: flex; gap: 14px; justify-content: center; align-items: center; flex-wrap: wrap; }
+  .btn-wrapper { flex: 0 0 auto; }
+  button { border: none; border-radius: 999px; padding: 14px 26px; font-size: 1rem; font-weight: 600; cursor: pointer; transition: transform 0.25s ease, box-shadow 0.25s ease; min-width: 100px; }
+  button:active { transform: scale(0.95); }
+  .yes { background: linear-gradient(135deg, #ff4d6d, #ff758f); color: white; box-shadow: 0 10px 22px rgba(255,77,109,0.35); transform-origin: center; }
+  .no { background: #f1f1f1; color: #444; }
+  .success { font-size: 1.5rem; font-weight: 700; color: #ff4d6d; margin-top: 14px; animation: popIn 0.6s ease; }
+  @keyframes popIn { from { transform: scale(0.7); opacity: 0; } to { transform: scale(1); opacity: 1; } }
+  .heart { position: absolute; font-size: 18px; animation: floatUp 5s linear infinite; opacity: 0.7; }
+  @keyframes floatUp { from { transform: translateY(0); opacity: 0.8; } to { transform: translateY(-110vh); opacity: 0; } }
+  @media (max-width: 400px) { h1 { font-size: 1.5rem; } button { padding: 13px 22px; } }
+</style>
 </head>
 <body>
 
-  <div class="card">
-    <h1>Will you be my Valentine? ❤️</h1>
-    <p>I promise I'll make it special 🌹</p>
+<div class="card">
+  <h1>Will you be my Valentine? ❤️</h1>
+  <p>I promise I'll make it special 🌹</p>
 
-    <div class="buttons">
-      <button class="yes" id="yesBtn">YES 💖</button>
-      <button class="no" id="noBtn">No 😢</button>
-    </div>
-
-    <div id="result"></div>
+  <div class="buttons">
+    <div class="btn-wrapper"><button class="yes" id="yesBtn">YES 💖</button></div>
+    <div class="btn-wrapper"><button class="no" id="noBtn">No 😢</button></div>
   </div>
 
-  <script>
-    const yesBtn = document.getElementById("yesBtn");
-    const noBtn = document.getElementById("noBtn");
-    const result = document.getElementById("result");
+  <div id="result"></div>
+</div>
 
-    let scale = 1;
-    let noClicks = 0;
+<script>
+const yesBtn = document.getElementById("yesBtn");
+const noBtn = document.getElementById("noBtn");
+const result = document.getElementById("result");
+const messagePara = document.querySelector("p");
 
-    const noMessages = [
-      "Are you sure? 🥺",
-      "Really sure? 😭",
-      "But I like you 😳",
-      "Please? 💕",
-      "I'll bring snacks 🍫",
-      "Last chance 😔"
-    ];
+const noMessages = [
+  "Bakit no pinindot mo? 🥺",
+  "Haluh, bakit mo pinindot ule? 😭",
+  "But crush po kitaaa 😳",
+  "Please, baby? 💕",
+  "Magdadala ako ng flat tops 🍫",
+  "Nalolongkot nako oh 😔",
+  "Oh ayan tinagtag ko nalang ang no 😝"
+];
 
-    function createHeart() {
-      const heart = document.createElement("div");
-      heart.className = "heart";
-      heart.innerText = "❤️";
-      heart.style.left = Math.random() * 100 + "vw";
-      heart.style.animationDuration = 3 + Math.random() * 3 + "s";
-      document.body.appendChild(heart);
+let noClicks = 0;
+let yesScale = 1;
 
-      setTimeout(() => heart.remove(), 6000);
+function createHeart() {
+  const heart = document.createElement("div");
+  heart.className = "heart";
+  heart.innerText = "❤️";
+  heart.style.left = Math.random() * 100 + "vw";
+  heart.style.animationDuration = 3 + Math.random() * 3 + "s";
+  document.body.appendChild(heart);
+  setTimeout(() => heart.remove(), 6000);
+}
+
+setInterval(createHeart, 700);
+
+noBtn.addEventListener("click", () => {
+  noClicks++;
+  yesScale += 0.25;
+  yesBtn.style.width = (100 * yesScale) + 'px';
+
+  if (noClicks <= noMessages.length) {
+    messagePara.textContent = noMessages[noClicks - 1];
+    if (noClicks === 7) {
+      noBtn.style.display = "none";
     }
+  }
+});
 
-    setInterval(createHeart, 700);
+yesBtn.addEventListener("click", () => {
+  document.querySelector(".buttons").style.display = "none";
+  messagePara.textContent = "💕 YAY!!! See you on Valentine's 🌹";
+  result.innerHTML = '<div class="success">YAY!!! Kita nalang tayo sa SM ng 10:00, wag ma late ah hehe</div>';
 
-    noBtn.addEventListener("click", () => {
-      noClicks++;
 
-      // Increased growth speed
-      scale += 0.45;
-      yesBtn.style.transform = `scale(${scale})`;
+  for (let i = 0; i < 25; i++) {
+    setTimeout(createHeart, i * 120);
+  }
+});
+</script>
 
-      if (noClicks <= noMessages.length) {
-        noBtn.textContent = noMessages[noClicks - 1];
-      }
-
-      // Hide earlier so YES dominates faster
-      if (noClicks > 6) {
-        noBtn.style.display = "none";
-      }
-    });
-
-    yesBtn.addEventListener("click", () => {
-      document.querySelector(".buttons").style.display = "none";
-      result.innerHTML = '<div class="success">YAY!!! 💕 See you on Valentine\'s 🌹</div>';
-
-      for (let i = 0; i < 25; i++) {
-        setTimeout(createHeart, i * 120);
-      }
-    });
-  </script>
 </body>
 </html>
