--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   p { font-size: 1rem; color: #666; margin-bottom: 28px; transition: all 0.3s ease; }
   .buttons { display: flex; gap: 14px; justify-content: center; align-items: center; flex-wrap: wrap; }
   .btn-wrapper { flex: 0 0 auto; }
-  button { border: none; border-radius: 999px; padding: 14px 26px; font-size: 1rem; font-weight: 600; cursor: pointer; transition: transform 0.25s ease, box-shadow 0.25s ease; min-width: 100px; }
+  button { border: none; border-radius: 999px; padding: 14px 26px; font-size: 1rem; font-weight: 600; cursor: pointer; transition: transform 0.25s ease, box-shadow 0.25s ease, width 0.25s ease, height 0.25s ease, font-size 0.25s ease; min-width: 100px; }
   button:active { transform: scale(0.95); }
   .yes { background: linear-gradient(135deg, #ff4d6d, #ff758f); color: white; box-shadow: 0 10px 22px rgba(255,77,109,0.35); transform-origin: center; }
   .no { background: #f1f1f1; color: #444; }
@@ -56,6 +56,10 @@ const noMessages = [
 let noClicks = 0;
 let yesScale = 1;
 
+const originalWidth = yesBtn.offsetWidth;
+const originalHeight = yesBtn.offsetHeight;
+const originalFontSize = parseFloat(window.getComputedStyle(yesBtn).fontSize);
+
 function createHeart() {
   const heart = document.createElement("div");
   heart.className = "heart";
@@ -71,7 +75,10 @@ setInterval(createHeart, 700);
 noBtn.addEventListener("click", () => {
   noClicks++;
   yesScale += 0.25;
-  yesBtn.style.width = (100 * yesScale) + 'px';
+
+  yesBtn.style.width = originalWidth * yesScale + 'px';
+  yesBtn.style.height = originalHeight * yesScale + 'px';
+  yesBtn.style.fontSize = originalFontSize * yesScale + 'px';
 
   if (noClicks <= noMessages.length) {
     messagePara.textContent = noMessages[noClicks - 1];
@@ -85,7 +92,6 @@ yesBtn.addEventListener("click", () => {
   document.querySelector(".buttons").style.display = "none";
   messagePara.textContent = "💕 YAY!!! See you on Valentine's 🌹";
   result.innerHTML = '<div class="success">YAY!!! Kita nalang tayo sa SM ng 10:00, wag ma late ah hehe</div>';
-
 
   for (let i = 0; i < 25; i++) {
     setTimeout(createHeart, i * 120);
